/****************************** v1.3 *********************************/

Added:
 * Support for arm64 and arm64e targets

Changed:
 * Updated TAPI library to 1100.0.11

/****************************** v1.2 *********************************/

Added:
 * Support for ld64 '-lto_library <path>'

Changed:
 * Updated cctools to 949.0.1 and ld64 to 512.4

Removed:
 * Support for <= 10.5 SDKs. Use 'osxcross-1.1' branch for these.


/****************************** v1.1 *********************************/

Added:
 * ... back support for OpenBSD

Changed:
 * Updated cctools to 927.0.2 and ld64 to 450.3
 * TARGET_DIR can now be configured via env
   (TARGET_DIR=<path> ./build.sh)
 * Various other improvements and fixes

/****************************** v1.0 *********************************/

Added:
 * Support for TAPIv3 stubs (including "zippering" target)
 * Support for macOS SDKs up to 10.15
 * SDK packaging script for ".xip" Xcode images
   -> tools/gen_sdk_package_pbzx.sh <xcode.xip> 
   --> tested up to Xcode 10.2.1

Fixed:
 * Implemented fix for https://github.com/tpoechtrager/osxcross/issues/171
 * Implemented fix for https://github.com/tpoechtrager/osxcross/issues/178
 * Implemented fix for https://github.com/tpoechtrager/osxcross/issues/182

Changed:
 * cctools, ld64, apple-libtapi and xar are now "git clone"'d
   and no longer come with OSXCross.
 * Updated cctools to 921 and ld64 to 409.12

Removed:
 * Support for Cygwin and *BSD (besides FreeBSD)
 * Support for building OSXCross with GCC

/****************************** v0.15 ********************************/

Changed:
 * Updated cctools to 895
 * Updated ld64 to 274.2 (without TAPIv2 support)

Added:
 * Support for ThinLTO:
   -> https://clang.llvm.org/docs/ThinLTO.html
   -> http://blog.llvm.org/2016/06/thinlto-scalable-and-incremental-lto.html
   -> Requires LLVM/Clang >= 3.8. LLVM/Clang >= 3.9 is recommended.
 * USE_CLANG_AS build.sh option:
   -> Use Clang as assembler.
