@@ -5,7 +5,7 @@
 # This script requires the OS X SDK and the Clang/LLVM compiler.
 #
 
-VERSION=1.3
+VERSION=1.4
 
 pushd "${0%/*}" &>/dev/null
 
@@ -130,8 +130,8 @@ fi
 
 ## cctools and ld64 ##
 
-CCTOOLS_VERSION=949.0.1
-LINKER_VERSION=530
+CCTOOLS_VERSION=973.0.1
+LINKER_VERSION=609
 
 get_sources \
   https://github.com/tpoechtrager/cctools-port.git \
