@@ -1,3 +1,9 @@
+/****************************** v1.4 *********************************/
+
+Changed:
+ * Updated cctools to 973.0.1 and ld64 to 609
+
+
 /****************************** v1.3 *********************************/
 
 Added:
